# linuxbuhIceb

./: cp.sh
linuxbuh20120110/: Makefile  arhivw  iceBw.h
linuxbuh20120110/buhg_g/: Makefile
linuxbuh20120110/bx/: Makefile.am  avtprodokt.alx  avtprouslr.alx  buh_kaufz.alx  buhf7.alx  buhkom.alx  glk_balans_n2.alx  in_d12_end.alx  kalend.alx  kasord1.alx  kasorder2.alx  mord10.alx  nakl.alx  nalnaks1.alx  nalnakst.alx  ppw.alx  rnn_nast.alx  rnn_nimp1.alx  rnnd2_start.alx  rnnd5_start.alx  rpvnn0_1.alx  rpvnn1.alx  rpvnn2.alx  spis_koment_tre.alx  uosact.alx  uslkor.alx  uslnast.alx  zaralim.alx  zarbanks.alx  zarboln.alx  zardod13.alx  zardog.alx  zardolhn.alx  zarkalndr.alx  zarotp.alx  zarpens.alx  zarspv.alx  zarspv1.alx  zarsvfz_start.alx
linuxbuh20120110/doc/: admin.txt  admin3.txt  buhg.txt  buhg2.txt  buhg4_4.txt  buhg5_13.txt  buhg5_1_1.txt  buhg5_5.txt  (+69 more)
linuxbuh20120111/: Makefile  iceBw.h
linuxbuh20120113/: INSTALL
linuxbuh20120131/: CHANGES  DVERSION  INSTALL  extractw
linuxbuh20120201/: iceBw.h
linuxbuh20120201/doc/: CONTENTS  Makefile.am  buhg0.txt  buhg3.txt  buhg3_1.txt  buhg3a.txt  buhg4_1.txt  buhg4_7.txt  buhg5_11.txt  buhg7.txt  dokum2.10.txt  dokum2_1_2_1.txt  dokum2_4.txt  dokum2_7.txt  epson.txt  iceb_t_rabfil.txt  kas2_1_1_1.txt  kas2_2.txt  kas3.txt  kas3_1.txt  kas3_2.txt  kas3_2_1.txt  kas3_4.txt  local.txt  matu.txt  matu2_1_2a.txt  matu2_2.txt  matu3.txt  matu4_8.txt  matu5.txt  matu5_11.txt  matu5_9.txt  rnn0.txt  rnn1.txt  rnn1_1.txt  rnn3.txt  smenabaz.txt  spec.txt  spec1.txt  spec4.txt  (+41 more)
orig/: CHANGES  Makefile  iceBw.h
(+2641 files in other folders)
